Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14638

autochk (and chkdsk) is very unreliable

    XMLWordPrintable

Details

    Description

      Thanks to the last fastfat fixes, atochk is now working when the volume gets corrupted, however autochk seems to be very buggy, it can corrupt the filesytem even further, and it can even make ReactOS unbootable! I think you should disable autochk until it is fixed. The easiest way to reproduce that is to install Firefox from rapps and forcefully reboot ReactOS few times to let autochk do it's job. ReactOS's chkdsk is also affected, it corrupted the filesystem when I ran it over damaged ReactOS installation

      Attachments

        Issue Links

          Activity

            People

              Heis Spiter Pierre Schweitzer
              Illen Illen
              Votes:
              3 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: