[0.4.9][AUTOCHK] Don't check any volume on boot CORE-14638

This will avoid triggering a FAT repair on
unclean FAT volumes.

If dosfstools.fsck works fine in Linux, its
usage on ReactOS triggers worse corruption
than unclean shutdown.

'autochk during OS startup' has been added during 0.4.9-dev-xxxx.
Given I've no time for debugging this, I
kill it off. This is just a workaround of course.

For now the best chances to repair a FAT FS corruption after non-clean-shutdown
is to mount that FS within 2k3sp2 and give the MS chkdsk an attempt to repair it.
Success is not guaranteed, but it works surprisingly often.
The earlier you do that after non-clean-shutdown,
the better your chances for success will be.

The workaround was picked from
0.4.13-dev-169-g ab69736a1d9c76260c500b11491328244d027893
0.4.10-dev-379-g 3b6faba11a0d0593cd03e036fde79d7e0fb7bec9 (partially, just enough to support the early-bailout)